# diskquota

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  activetable.c  activetable.h  diskquota--1.0--2.0.sql  diskquota--1.0.sql  diskquota--2.0--1.0.sql  diskquota--2.0.sql  diskquota.c  diskquota.control  diskquota.h  diskquota_schedule  diskquota_schedule_int  diskquota_unit_test.c  diskquota_utility.c  enforcement.c  gp_activetable.c  gp_activetable.h  gp_utils.c  gp_utils.h  init_file  pg_utils.c  pg_utils.h  quotamodel.c  relation_cache.c  relation_cache.h  test_diskquota.conf
.gitmessage/: commit.template
cmake/: Distro.cmake  Gpdb.cmake  current_binary_name  install_gpdb_component
concourse/: README.md  fly.sh
concourse/pipeline/: README.md  commit.yml  dev.yml  job_def.lib.yml  pipeline.yml  pr.yml  release_pipeline.yml  res_def.yml  trigger_def.lib.yml
concourse/scripts/: build_diskquota.sh  install_dep.sh  test_common.sh  test_diskquota.sh  upgrade_extension.sh
concourse/tasks/: build_diskquota.yml  test_diskquota.yml  upgrade_extension.yml
data/: generate_insert.py  generate_table.py
doc/: rfc_001_hard_limit.md
expected/: clean.out  fini.out  init.out  prepare.out  test_column.out  test_copy.out  test_delete_quota.out  test_drop_table.out  test_extension.out  test_fast_disk_check.out  test_index.out  test_insert_after_drop.out  test_manytable.out  test_mistake.out  test_partition.out  test_pause_and_resume.out  test_primary_failure.out  test_relation_cache.out  test_relation_size.out  test_rename.out  test_reschema.out  test_role.out  test_schema.out  test_table_size.out  test_tablespace_role.out  test_tablespace_role_perseg.out  test_tablespace_schema.out  test_tablespace_schema_perseg.out  test_temp_role.out  test_toast.out  test_transaction.out  test_truncate.out  test_update.out  test_vacuum.out
patch/: pg_hooks.patch
sql/: clean.sql  fini.sql  init.sql  prepare.sql  prepare0.sql  test_column.sql  test_copy.sql  test_delete_quota.sql  test_drop_table.sql  test_extension.sql  test_fast_disk_check.sql  test_insert_after_drop.sql  test_many_active_tables.sql  test_mistake.sql  test_partition.sql  test_primary_failure.sql  test_relation_cache.sql  test_relation_size.sql  test_rename.sql  test_reschema.sql  test_role.sql  test_schema.sql  test_table_size.sql  test_tablespace_role.sql  test_tablespace_role_perseg.sql  test_tablespace_schema.sql  test_tablespace_schema_perseg.sql  test_temp_role.sql  test_toast.sql  test_transaction.sql  test_truncate.sql  test_update.sql  test_vacuum.sql
tests/: Makefile  init_file
tests/isolation2/: .gitignore  Makefile  isolation2_schedule
tests/isolation2/expected/: config.out  init.out  reset_config.out  test_blackmap.out  test_create_extension.out  test_drop_extension.out  test_relation_size.out  test_truncate.out  test_vacuum.out  test_worker_timeout.out
tests/isolation2/sql/: cleanup.sql  config.sql  init.sql  prepare.sql  reset_config.sql  test_blackmap.sql  test_create_extension.sql  test_drop_extension.sql  test_relation_size.sql  test_truncate.sql  test_vacuum.sql  test_worker_timeout.sql
tests/regress/: Makefile  diskquota_schedule  diskquota_schedule_int  regress_init_file
tests/regress/expected/: clean.out  config.out  init.out  prepare.out  reset_config.out  test_appendonly.out  test_blackmap.out  test_column.out  test_copy.out  test_create_extension.out  test_ctas_before_set_quota.out  test_ctas_no_preload_lib.out  test_ctas_pause.out  test_ctas_role.out  test_ctas_schema.out  test_ctas_tablespace_role.out  test_ctas_tablespace_schema.out  test_default_tablespace.out  test_delete_quota.out  test_drop_after_pause.out  test_drop_extension.out  test_drop_table.out  test_extension.out  test_fast_disk_check.out  test_fetch_table_stat.out  test_index.out  test_init_table_size_table.out  test_insert_after_drop.out  test_many_active_tables.out  test_mistake.out  test_partition.out  test_pause_and_resume.out  test_pause_and_resume_multiple_db.out  test_primary_failure.out  test_recreate.out  test_relation_cache.out  test_relation_size.out  test_rename.out  test_reschema.out  test_role.out  (+15 more)
tests/regress/sql/: clean.sql  config.sql  init.sql  prepare.sql  reset_config.sql  test_appendonly.sql  test_blackmap.sql  test_column.sql  test_copy.sql  test_create_as_role.sql  test_create_as_schema.sql  test_create_as_tablespace_role.sql  test_create_as_tablespace_schema.sql  test_create_extension.sql  test_ctas_before_set_quota.sql  test_ctas_no_preload_lib.sql  test_ctas_pause.sql  test_ctas_role.sql  test_ctas_schema.sql  test_ctas_tablespace_role.sql  test_ctas_tablespace_schema.sql  test_default_tablespace.sql  test_delete_quota.sql  test_drop_after_pause.sql  test_drop_table.sql  test_extension.sql  test_fast_disk_check.sql  test_fetch_table_stat.sql  test_index.sql  test_init_table_size_table.sql  test_insert_after_drop.sql  test_many_active_tables.sql  test_manytable.sql  test_mistake.sql  test_partition.sql  test_pause_and_resume.sql  test_pause_and_resume_multiple_db.sql  test_primary_failure.sql  (+21 more)
upgrade_test/: Makefile  README.md  diskquota_schedule_downgrade  diskquota_schedule_upgrade
upgrade_test/expected/: clean.out  downgrade_extension.out  init.out  install_new_version.out  prepare.out  set_config.out  test_delete_quota.out  test_rename.out  test_reschema.out  test_role.out  test_schema.out  test_tablespace_role.out  test_tablespace_role_perseg.out  test_tablespace_schema.out  test_tablespace_schema_perseg.out  test_temp_role.out  upgrade_extension.out
upgrade_test/sql/: clean.sql  init.sql  install_old_version.sql  prepare.sql  set_config.sql  test.sh  test_delete_quota.sql  test_manytable.sql  test_rename.sql  test_reschema.sql  test_role.sql  test_schema.sql  test_tablespace_role.sql  test_tablespace_role_perseg.sql  test_tablespace_schema.sql  test_tablespace_schema_perseg.sql  test_temp_role.sql
